cloudformation/aqua-ecs/aquaEcs.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Version:6.2
  This AWS CloudFormation template installs the Aqua Command Center componants
  in ECS.
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: ECS Infrastructure Configuration
        Parameters:
          - EcsClusterName
          - EcsSecurityGroupId
          - VpcId
          - VpcCidr
          - EcsInstanceSubnets
          - LbSubnets
      - Label:
          default: Aqua Security Configuration
        Parameters:
          - AquaConsoleAccess
          - AquaServerImage
          - AquaGatewayImage
          - AquaEnforcerImage
          - BatchInstallToken
      - Label:
          default: >-
            RDS Configuration: RDS Configuration
        Parameters:
          - RdsInstanceName
          - RdsMasterUsername
          - RdsMasterPassword
          - RdsInstanceClass
          - RdsStorage
          - MultiAzDatabase
    ParameterLabels:
      EcsClusterName:
        default: ECS cluster name
      EcsSecurityGroupId:
        default: ECS cluster security group
      VpcId:
        default: VPC ID
      VpcCidr:
        default: VPC CIDR
      EcsInstanceSubnets:
        default: ECS Instance Subnets
      LbSubnets:
        default: Aqua LB Subnets
      AquaConsoleAccess:
        default: Web Console Source
      RdsInstanceName:
        default: RDS instance name
      RdsMasterUsername:
        default: RDS username
      RdsMasterPassword:
        default: RDS password
      RdsInstanceClass:
        default: RDS instance type
      RdsStorage:
        default: RDS storage size (GB)
      MultiAzDatabase:
        default: Enable Multi-AZ RDS
Parameters:
  BatchInstallToken:
    Type: String
    Description: A string used as the token in the Aqua Enforcer Install command.
  AquaServerImage:
    Type: String
    Description: Enter server image path on ECR
  AquaGatewayImage:
    Type: String
    Description: Enter gateway image path on ECR
  AquaEnforcerImage:
    Type: String
    Description: Enter enforcer image path on ECR
  EcsClusterName:
    Description: Existing ECS cluster name
    Type: String
  EcsSecurityGroupId:
    Type: 'AWS::EC2::SecurityGroup::Id'
    Description: The security group assigned to the ECS cluster during cluster creation
  VpcId:
    Description: VpcId to deploy into
    Type: 'AWS::EC2::VPC::Id'
  VpcCidr:
    Description: 'For use by load balancer service polling. Enter VPC CIDR. Ex: 10.0.0.0/16'
    Type: String
  EcsInstanceSubnets:
    Type: 'List<AWS::EC2::Subnet::Id>'
    Description: Select all the subnets ECS utilizes
    ConstraintDescription: >-
      Password must be at least 9 characters long and have 3 out of the
      following: one number, one lower case, one upper case, or one special
      character.
  LbSubnets:
   Type: 'List<AWS::EC2::Subnet::Id>'
   Description: Select external ones if you need internet access.
  AquaConsoleAccess:
    Description: The IP address or range that may be used to access the Aqua Console
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x
  RdsInstanceName:
    Default: aquadb
    Description: ''
    Type: String
    MinLength: '1'
    MaxLength: '64'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: Must begin with a letter and between 1 and 64 alphanumeric characters.
  RdsMasterUsername:
    Description: Enter the master username for the RDS instance.
    Type: String
    MinLength: '1'
    MaxLength: '63'
    AllowedPattern: '^[a-zA-Z0-9]*$'
    ConstraintDescription: >-
      Must be 1 to 63 characters long, begin with a letter, contain only
      alphanumeric characters, and not be a reserved word by PostgreSQL engine.
  RdsMasterPassword:
    NoEcho: 'true'
    Description: >-
      Enter the master password for the RDS instance. This password must contain
      8 to 128 characters and can be any printable ASCII character except @, /,
      or ".
    Type: String
    MinLength: '8'
    MaxLength: '128'
    AllowedPattern: >-
      ^((?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])|(?=.*[0-9])(?=.*[a-z])(?=.*[!@#$%^&*])|(?=.*[0-9])(?=.*[A-Z])(?=.*[!@#$%^&*])|(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*])).{8,128}$
    ConstraintDescription: >-
      Password must be at least 9 characters long and have 3 out of the
      following: one number, one lower case, one upper case, or one special
      character.
  RdsInstanceClass:
    Description: ''
    Type: String
    Default: db.t2.medium
    AllowedValues:
      - db.t2.micro
      - db.t2.small
      - db.t2.medium
      - db.t2.large
      - db.t2.xlarge
      - db.t2.2xlarge
      - db.m4.large
      - db.m4.xlarge
      - db.m4.2xlarge
      - db.m4.4xlarge
      - db.m4.10xlarge
      - db.m4.16xlarge
      - db.r4.large
      - db.r4.xlarge
      - db.r4.2xlarge
      - db.r4.4xlarge
      - db.r4.8xlarge
      - db.r4.16xlarge
      - db.r3.large
      - db.r3.2xlarge
      - db.r3.4xlarge
      - db.r3.8xlarge
    ConstraintDescription: Must be a valid EC2 RDS instance type
  RdsStorage:
    Default: '40'
    Description: ''
    Type: Number
    MinValue: '40'
    MaxValue: '1024'
    ConstraintDescription: Must be set to between 40 and 1024GB.
  MultiAzDatabase:
    Default: 'false'
    Description: ''
    Type: String
    AllowedValues:
      - 'true'
      - 'false'
    ConstraintDescription: Must be either true or false.
Resources:
  AquaConsole:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    DependsOn:
      - EcsSecurityGroupIngress1
      - EcsSecurityGroupIngress2
      - EcsSecurityGroupIngress3
      - EcsSecurityGroupIngress4
      - EcsSecurityGroupIngress5
      - AquaConsoleSecurityGroup
    Properties:
      Name: !Join 
        - '-'
        - - !Ref EcsClusterName
          - AquaConsole
      Scheme: internet-facing
      SecurityGroups:
        - !Ref AquaConsoleSecurityGroup
      Subnets: !Ref LbSubnets
      Type: application
  AquaConsoleTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DependsOn:
      - AquaEcsTaskRole
      - RdsInstance
      - Secret0
      - Secret1
    Properties:
      Family: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-console
      Volumes:
        - Host:
            SourcePath: /var/run/docker.sock
          Name: docker-socket
      ContainerDefinitions:
        - Name: !Join 
            - '-'
            - - !Ref EcsClusterName
              - aqua-console
          Image: !Ref AquaServerImage
          MountPoints:
            - ContainerPath: /var/run/docker.sock
              SourceVolume: docker-socket
          PortMappings:
            - ContainerPort: '8080'
              HostPort: '8080'
            - ContainerPort: '8443'
              HostPort: '8443'
              Protocol: tcp
          Memory: '1024'
          Essential: 'true'
          Secrets:
            - Name: SCALOCK_DBPASSWORD
              ValueFrom: !Ref Secret0
            - Name: SCALOCK_AUDIT_DBPASSWORD
              ValueFrom: !Ref Secret0
            - Name: BATCH_INSTALL_TOKEN
              ValueFrom: !Ref Secret1
          Environment:
            - Name: AQUA_GRPC_MODE
              Value: 1
            - Name: SCALOCK_DBSSL
              Value: require
            - Name: SCALOCK_AUDIT_DBSSL
              Value: require
            - Name: SCALOCK_DBNAME
              Value: scalock
            - Name: BATCH_INSTALL_NAME
              Value: ECS
            - Name: BATCH_INSTALL_GATEWAY
              Value: !GetAtt 
                - AquaNlb
                - DNSName
            - Name: SCALOCK_DBUSER
              Value: !Ref RdsMasterUsername
            - Name: SCALOCK_DBHOST
              Value: !GetAtt 
                - RdsInstance
                - Endpoint.Address
            - Name: SCALOCK_AUDIT_DBUSER
              Value: !Ref RdsMasterUsername
            - Name: SCALOCK_AUDIT_DBNAME
              Value: slk_audit
            - Name: SCALOCK_AUDIT_DBHOST
              Value: !GetAtt 
                - RdsInstance
                - Endpoint.Address
      NetworkMode: bridge
      TaskRoleArn: !Ref AquaEcsTaskRole
      ExecutionRoleArn: !Ref AquaEcsTaskRole
  AquaConsoleService:
    Type: 'AWS::ECS::Service'
    DependsOn:
      - AquaConsoleTaskDefinition
      - AquaConsoleListener
      - AquaConsoleGrpcListener
    Properties:
      Cluster: !Ref EcsClusterName
      ServiceName: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-console
      DesiredCount: '1'
      PlacementStrategies:
        - Type: spread
          Field: 'attribute:ecs.availability-zone'
        - Type: spread
          Field: instanceId
      DeploymentConfiguration:
        MaximumPercent: '100'
        MinimumHealthyPercent: '0'
      LoadBalancers:
        - ContainerName: !Join 
            - '-'
            - - !Ref EcsClusterName
              - aqua-console
          ContainerPort: '8080'
          TargetGroupArn: !Ref AquaConsoleTargetGroup
        - ContainerName: !Join 
            - '-'
            - - !Ref EcsClusterName
              - aqua-console
          ContainerPort: '8443'
          TargetGroupArn: !Ref AquaConsoleGrpcTargetGroup
      TaskDefinition: !Ref AquaConsoleTaskDefinition
  AquaConsoleListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - AquaConsoleTargetGroup
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref AquaConsoleTargetGroup
      LoadBalancerArn: !Ref AquaConsole
      Port: '8080'
      Protocol: HTTP
  AquaConsoleGrpcListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - AquaConsoleGrpcTargetGroup
      - AquaNlb
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref AquaConsoleGrpcTargetGroup
      LoadBalancerArn: !Ref AquaNlb
      Port: '8443'
      Protocol: TCP
  AquaConsoleTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - AquaConsole
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 6
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: '200'
      Name: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-console
      Port: '8080'
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VpcId
  AquaConsoleGrpcTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - AquaConsole
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: TCP
      HealthyThresholdCount: 2
      HealthCheckPort: 8080
      Name: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-grpc
      Port: '8443'
      Protocol: TCP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
  AquaNlb:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aquaNlb
      Scheme: internal
      Subnets: !Ref LbSubnets
      LoadBalancerAttributes: 
        - Key: load_balancing.cross_zone.enabled
          Value: true
      Type: network
  AquaGatewayListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - AquaGatewayTargetGroup
      - AquaNlb
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref AquaGatewayTargetGroup
      LoadBalancerArn: !Ref AquaNlb
      Port: '3622'
      Protocol: TCP
  AquaGatewayTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - AquaNlb
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: TCP
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckPort: 8089
      Name: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-gateway
      Port: '3622'
      Protocol: TCP
      VpcId: !Ref VpcId
  AquaGatewayTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DependsOn:
      - AquaEcsTaskRole
      - RdsInstance
      - Secret0
    Properties:
      Family: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-gateway
      TaskRoleArn: !Ref AquaEcsTaskRole
      ExecutionRoleArn: !Ref AquaEcsTaskRole
      ContainerDefinitions:
        - Name: !Join 
            - '-'
            - - !Ref EcsClusterName
              - aqua-gateway
          Image: !Ref AquaGatewayImage
          PortMappings:
            - ContainerPort: '3622'
              HostPort: '3622'
            - ContainerPort: '8089'
              HostPort: '8089'
              Protocol: tcp
          Memory: '1024'
          Essential: 'true'
          Secrets:
            - Name: SCALOCK_DBPASSWORD
              ValueFrom: !Ref Secret0
            - Name: SCALOCK_AUDIT_DBPASSWORD
              ValueFrom: !Ref Secret0
          Environment:
            - Name: SCALOCK_DBSSL
              Value: require
            - Name: SCALOCK_AUDIT_DBSSL
              Value: require
            - Name: HEALTH_MONITOR
              Value: '0.0.0.0:8089'
            - Name: SCALOCK_DBUSER
              Value: !Ref RdsMasterUsername 
            - Name: SCALOCK_DBNAME
              Value: scalock
            - Name: SCALOCK_DBHOST
              Value: !GetAtt 
                - RdsInstance
                - Endpoint.Address 
            - Name: SCALOCK_AUDIT_DBUSER
              Value: !Ref RdsMasterUsername 
            - Name: SCALOCK_AUDIT_DBNAME
              Value: slk_audit
            - Name: SCALOCK_AUDIT_DBHOST
              Value: !GetAtt 
                - RdsInstance
                - Endpoint.Address 
            - Name: AQUA_CONSOLE_SECURE_ADDRESS
              Value: !Join 
                - ''
                - - !GetAtt 
                    - AquaNlb
                    - DNSName
                  - ':8443'
      NetworkMode: bridge
  AquaGatewayService:
    Type: 'AWS::ECS::Service'
    DependsOn:
      - AquaGatewayTaskDefinition
      - AquaNlb
      - AquaGatewayTargetGroup
      - AquaGatewayListener
      - EcsSecurityGroupIngress4
    Properties:
      Cluster: !Ref EcsClusterName
      ServiceName: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-gateway
      DesiredCount: '2'
      PlacementStrategies:
        - Type: spread
          Field: 'attribute:ecs.availability-zone'
        - Type: spread
          Field: instanceId
      DeploymentConfiguration:
        MaximumPercent: '100'
        MinimumHealthyPercent: '50'
      LoadBalancers:
        - ContainerName: !Join 
            - '-'
            - - !Ref EcsClusterName
              - aqua-gateway
          ContainerPort: '3622'
          TargetGroupArn: !Ref AquaGatewayTargetGroup
      TaskDefinition: !Ref AquaGatewayTaskDefinition
  AquaEnforcerTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DependsOn:
      - AquaGatewayService
      - AquaEcsTaskRole
      - Secret1
    Properties:
      PidMode: 'host'
      ContainerDefinitions:
        - Memory: 256
          Essential: 'true'
          MountPoints:
            - ContainerPath: /var/run
              SourceVolume: var-run
            - ContainerPath: /dev
              SourceVolume: dev
            - ContainerPath: /host/opt/aquasec
              SourceVolume: aquasec
              ReadOnly: true
            - ContainerPath: /opt/aquasec/tmp
              SourceVolume: aquasec-tmp
            - ContainerPath: /opt/aquasec/audit
              SourceVolume: aquasec-audit
            - ContainerPath: /host/proc
              SourceVolume: proc
              ReadOnly: true
            - ContainerPath: /host/sys
              SourceVolume: sys
              ReadOnly: true
            - ContainerPath: /host/etc
              SourceVolume: etc
              ReadOnly: true
          Name: aqua-enforcer
          Privileged: true
          Secrets:
            - Name: AQUA_TOKEN
              ValueFrom: !Ref Secret1
          Environment:
            - Name: AQUA_SERVER
              Value: !GetAtt 
                - AquaNlb
                - DNSName
            - Name: SILENT
              Value: 'yes'
            - Name: RESTART_CONTAINERS
              Value: 'no'
            - Name: AQUA_LOGICAL_NAME
              Value: !Join 
                - '-'
                - - ECS
                  - !Ref EcsClusterName
          Image: !Ref AquaEnforcerImage
          Cpu: 256
      Volumes:
        - Host:
            SourcePath: /var/run
          Name: var-run
        - Host:
            SourcePath: /dev
          Name: dev
        - Host:
            SourcePath: /opt/aquasec
          Name: aquasec
        - Host:
            SourcePath: /opt/aquasec/tmp
          Name: aquasec-tmp
        - Host:
            SourcePath: /opt/aquasec/audit
          Name: aquasec-audit
        - Host:
            SourcePath: /proc
          Name: proc
        - Host:
            SourcePath: /sys
          Name: sys
        - Host:
            SourcePath: /etc
          Name: etc
      Family: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-enforcer
      ExecutionRoleArn: !Ref AquaEcsTaskRole
  AquaEnforcerDaemon:
    DependsOn:
      - AquaEnforcerTaskDefinition
    Type: 'AWS::ECS::Service'
    Properties:
      Cluster: !Ref EcsClusterName
      SchedulingStrategy: DAEMON
      ServiceName: !Join 
        - '-'
        - - !Ref EcsClusterName
          - aqua-enforcer
      TaskDefinition: !Ref AquaEnforcerTaskDefinition
  AquaConsoleSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow access to Aqua Console Instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: !Ref AquaConsoleAccess
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref AquaConsoleAccess
        - IpProtocol: tcp
          FromPort: '8433'
          ToPort: '8433'
          CidrIp: !Ref AquaConsoleAccess
  EcsSecurityGroupIngress1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 8080 from VPC to console.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
  EcsSecurityGroupIngress2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 3622 from VPC to gateways.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 3622
      ToPort: 3622
  EcsSecurityGroupIngress3:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 80 from VPC to gateways for LB health check.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
  EcsSecurityGroupIngress4:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 8089 from VPC to gateways helthcheck.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8089
      ToPort: 8089
  EcsSecurityGroupIngress5:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 8443 from VPC to console gRPC.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8443
      ToPort: 8443
  AquaEcsTaskRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: !Join 
        - '-'
        - - !Ref EcsClusterName
          - AquaEcsTaskRole
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: !Join 
            - '-'
            - - !Ref EcsClusterName
              - AquaScannerPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'ecr:GetDownloadUrlForLayer'
                  - 'ecr:BatchGetImage'
                  - 'ecr:DescribeImages'
                  - 'ecr:GetAuthorizationToken'
                  - 'ecr:DescribeRepositories'
                  - 'ecr:ListImages'
                  - 'ecr:BatchCheckLayerAvailability'
                  - 'ecr:GetRepositoryPolicy'
                Resource: '*'
              - !Ref 'AWS::NoValue'
        - PolicyName: !Join 
            - '-'
            - - !Ref EcsClusterName
              - AquaSecretsManagerPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'secretsmanager:GetSecretValue'
                Resource: 
                  - !Ref Secret0
                  - !Ref Secret1
  RdsInstance:
    Type: 'AWS::RDS::DBInstance'
    DependsOn:
      - RdsSecurityGroup
      - RdsInstanceSubnetGroup
    Properties:
      AllocatedStorage: !Ref RdsStorage
      AutoMinorVersionUpgrade: 'false'
      VPCSecurityGroups:
        - !Ref RdsSecurityGroup
      DBName: !Ref RdsInstanceName
      BackupRetentionPeriod: '7'
      DBInstanceIdentifier: !Ref RdsInstanceName
      DBInstanceClass: !Ref RdsInstanceClass
      DBSubnetGroupName: !Ref RdsInstanceSubnetGroup
      Engine: postgres
      EngineVersion: 9.6.9
      MasterUsername: !Ref RdsMasterUsername
      MasterUserPassword: !Ref RdsMasterPassword
      MultiAZ: !Ref MultiAzDatabase
      StorageType: gp2
  RdsInstanceSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: Source subnet
      SubnetIds: !Ref EcsInstanceSubnets
  RdsSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow access to RDS Instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          SourceSecurityGroupId: !Ref EcsSecurityGroupId
  Secret0:
    Type: AWS::SecretsManager::Secret
    Properties: 
      Description: Aqua RDS password
      Name: !Join 
        - '/'
        - - !Ref EcsClusterName
          - AquaRdsPassword
      SecretString: 
        !Ref RdsMasterPassword
  Secret1:
    Type: AWS::SecretsManager::Secret
    Properties: 
      Description: Aqua batch install token
      Name: !Join 
        - '/'
        - - !Ref EcsClusterName
          - AquaBatchInstallToken
      SecretString: 
        !Ref BatchInstallToken
Outputs:
  AquaConsole:
    Description: URL to access Aqua Security Console
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - AquaConsole
          - DNSName
        - ':8080'
  AquaGatewayExternalConnection:
    Description: >-
      Aqua Enforcer gateway startup connection string for use when Enforcers are
      external to VPC.
    Value: !Join 
      - ''
      - - !GetAtt 
          - AquaNlb
          - DNSName
        - ':3622'
  AquaConsoleGrpcConnection:
    Description: >-
      DNS to server gRPC
    Value: !Join 
      - ''
      - - !GetAtt 
          - AquaNlb
          - DNSName
        - ':8443'
  AquaEcsTaskRole:
    Description: IAM role assigned to access ECR
    Value: !Ref AquaEcsTaskRole
